Fixed error on server; Modified the displaying image's size;

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -70,7 +70,8 @@ body{
     border-radius: 12px;
 }
 #image{
-    max-height: 100%;
+    height: 100%;
+    max-width: 500px;
 }
 #uploaded-text{
     display: none;
